k8s/applications/utils/torrent/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torrent
  namespace: torrent
  labels:
    app: torrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torrent
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: torrent
      labels:
        app: torrent
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: Always
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: git-sync-vuetorrent
          image: registry.k8s.io/git-sync/git-sync:v4.5.1
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          args:
            - --repo=https://github.com/VueTorrent/VueTorrent
            - --root=/tmp/git-sync
            - --ref=latest-release
            - --period=12h
            - --link=/themes/vuetorrent
            - --max-failures=10
            - -v=2
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 2000m
              memory: 256Mi
          volumeMounts:
            - name: themes
              mountPath: /themes
            - name: tmp
              mountPath: /tmp
        - name: torrent
          image: ghcr.io/home-operations/qbittorrent:5.1.4
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 8080
            - name: torrent-tcp
              containerPort: 10011
              protocol: TCP
            - name: torrent-udp
              containerPort: 10011
              protocol: UDP
          resources:
            requests:
              cpu: 100m
              memory: 1.5Gi
            limits:
              cpu: 2000m
              memory: 8Gi
          volumeMounts:
            - name: torrent-config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
            - name: themes
              mountPath: /themes
            - name: data
              mountPath: /app/data
      volumes:
        - name: torrent-config
          persistentVolumeClaim:
            claimName: longhorn-torrent-config-pvc
        - name: tmp
          emptyDir: {}
        - name: themes
          emptyDir: {}
        - name: data
          emptyDir: {}
          # nfs:
          #   server: 192.168.1.117
          #   path: /mnt/pool-0/data
