k8s/applications/utils/torrent/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: torrent-service
  namespace: torrent
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: torrent-tcp
      port: 10011
      targetPort: torrent-tcp
      protocol: TCP
    # - name: torrent-udp
    #   port: 10011
    #   targetPort: torrent-udp
    #   protocol: UDP
