k8s/applications/utils/torrent/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: torrent-httproute
  namespace: torrent
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: gateway
      sectionName: https-wc-talmox-hera-home-karlsen-fr
  hostnames:
    - torrent.talmox.hera.home.karlsen.fr
  rules:
    - backendRefs:
        - name: torrent-service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
