k8s/applications/utils/torrent/TCPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: torrent-tcproute
  namespace: torrent
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: gateway
      sectionName: torrent-tcp
  rules:
    - backendRefs:
        - name: torrent-service
          port: 10011
